Kubernetes/Kubetail/yamls/ig-kubetail.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-kubetail-https-redirect
  namespace: kubetail
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-kubetail-security
  namespace: kubetail
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-kubetail-websecure
  namespace: kubetail
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubetail.urbaman.it`)
      services:
      - name: kubetail
        port: 4000
        serversTransport: traefik-kubetail-transport
      middlewares:
        - name: traefik-kubetail-security
  tls:
    secretName: kubetail-urbaman
    options:
      name: traefik-kubetail-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-kubetail-web
  namespace: kubetail
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kubetail.urbaman.it`)
      services:
      - name: kubetail
        port: 4000
      middlewares:
        - name: traefik-kubetail-https-redirect
